--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,21 @@
 .App {
-  text-align: center;
+    display:flex;
+    padding: 1rem;
+    margin: 2rem;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.column {
+    border: #eee 1px solid;
+    margin: 2rem;
+    flex-grow: 1;
+    text-align: center;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.card {
+    border: #ddd 1px solid;
+    padding: 2rem;
+    display: flex;
+    flex-grow: 1;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card .title {
+    flex-grow: 1;
+    text-align: center;
 }
