--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
-    /* font-size:62.5% */
+    font-size:62.5%
 }
 body{
     box-sizing: border-box;
@@ -12,8 +12,8 @@ body{
 .App {
     height: auto;
     display:flex;
-    padding: 2rem;
-    margin: 4rem;
+    padding: 4rem;
+    margin: 6rem;
     background-color: aliceblue;
     background-size: cover;
     text-transform: uppercase;
