--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ body{
     display:flex;
     padding: 4rem;
     margin: 6rem;
-    background-color: #FFE;
+    background-color: #FFD;
     background-size: cover;
     text-transform: uppercase;
     text-decoration: bold;
