--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body{
     box-sizing: border-box;
     background-size: cover;
     background-position: center;
-    padding: 10px;
+    padding: 1rem;
 }
 
 
